# npu-toolbox

./: .gitignore  .gitmsg  .gm  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-hardware.ts  test_npu.ps1  test_npu_rust.rs  test_powershell.rs  vite.config.ts
docs/: Intel_Ultra_NPU_创新应用全景研究报告.md  NPU工具箱_PRD.md  开发经验总结.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  npu_detector.rs  openvino.rs  ps.rs  python_env.rs
src/components/: Header.tsx  Layout.tsx  Sidebar.tsx  ToolGrid.tsx
src/pages/: AIChat.tsx  AudioTools.tsx  CreativeTools.tsx  HardwareInfo.tsx  Home.tsx  ImageTools.tsx  ModelLibrary.tsx  NotFound.tsx  OpenVINO.tsx  Programming.tsx  Settings.tsx  SystemTools.tsx  VideoTools.tsx
src/stores/: appStore.ts  hardwareStore.ts
src/types/: index.ts
src/utils/: tempColor.ts
